Another approach for a Cassandra dockerfile, still doesn't work

--- a/cassandra/Dockerfile
+++ b/cassandra/Dockerfile
@@ -1,6 +1,7 @@
 FROM spotify/cassandra
 MAINTAINER Jochen Keil
 
-RUN echo 'create keyspace reddit;' | cqlsh localhost
-RUN echo 'use reddit;' | cqlsh localhost
-RUN echo 'create column family permacache with column_type = 'Standard' and comparator = 'BytesType';' | cqlsh localhost
+ADD init.sh /init.sh
+RUN chmod +x /init.sh
+
+CMD "/init.sh"
